# garmin-connect-mcp

./: .env.example  .env.template  .gitignore  AGENTS.md  PROMPTS.md  README.md  README_EN.md  README_GUIDE.md  TOOL_SPEC.md  cache.py  install.py  main.py  package-lock.json  pyproject.toml  setup_claude_desktop.py  setup_garmin_auth.py  tool_results.json  utils.py
handlers/: __init__.py  analytics.py  training.py
scripts/: auth.py
services/: __init__.py  garmin_client.py
src/garmin_mcp/: __init__.py  auth.py  client.py  sanitize.py
src/garmin_mcp/tools/: __init__.py  activities.py  gear.py  heart_rate.py  records.py  summary.py  training.py  wellness.py  workout.py
tests/: test_handlers_activities.py  test_handlers_delegation.py  test_handlers_paginated.py  test_handlers_recent.py  test_handlers_weekly_summary.py  test_utils_response_guard.py  test_utils_training.py
tests/helpers/: __init__.py  stubs.py
