[project]
name = "garmin-connect-mcp"
version = "0.1.0"
description = "MCP server for Garmin Connect running data and training plan assistance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "garminconnect>=0.2.34",
    "garth>=0.5.17,<0.6.0",
    "mcp[cli]>=1.7.0",
    "python-dotenv>=1.0.0",
]
