[project]
name = "garmin-mcp"
version = "0.1.0"
description = "Garmin Connect MCP server specialized for running data"
requires-python = ">=3.10"
dependencies = [
    "garminconnect>=0.2.38",
    "mcp[cli]>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
garmin-mcp = "garmin_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_mcp"]

[tool.uv]
# Use editable install so code changes are picked up immediately
package = true
